--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wetterstation-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Einfache API für unsere Wetterstation.",
   "keywords": [
     "wetterstation",
@@ -19,10 +19,12 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-		"start": "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   }
 }
